--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ JWT_EMAIL_SECRET=paranga-email
 G_PASSWORD=xogjdxrraeeikidp
 G_USER=fabryheredia10@gmail.com
 APP_URL=http:localhost:8000
+FRONT_URL=http://localhost:5173
+NODE_ENV=development
